--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,9 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.4.1'
+        // 구글 서비스를 사용하기 위한 classpath
+        classpath 'com.google.gms:google-services:4.2.0'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,6 +18,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "https://maven.google.com" }
         google()
         jcenter()
         
