--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity android:name=".ChangePWActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".List" />
-        <activity android:name=".Mood" />
+        <activity android:name=".TrackerActivity" />
         <activity android:name=".ResetPWActivity" />
         <activity android:name=".SignInActivity" />
         <activity android:name=".SignUpActivity" />
