--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,5 +65,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation 'com.firebaseui:firebase-ui-storage:2.1.0'
+    implementation 'com.pes.materialcolorpicker:library:1.2.5'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
 apply plugin: 'com.google.gms.google-services'
